--- a/index.html
+++ b/index.html
@@ -15,10 +15,15 @@
 </head>
 
 <body>
-  <div class="grid-container">
-      <img class="qr-img" src="images/image-qr-code.png" />
-      <div class="qr-text-heading">Improve your front-end skills by building projects</div>
-      <div class="qr-text-content">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</div>
+  <div class="container">
+    <div class="card">
+      <img src="images/image-qr-code.png" />
+      <div class="text">
+        <h2>Improve your front-end skills by building projects</h2>
+        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next
+          level</p>
+      </div>
+    </div>
   </div>
 </body>
 
